apps/monitoring/prometheus-blackbox-exporter/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-blackbox-exporter
  namespace: monitoring
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: prometheus-blackbox-exporter
      namespace: monitoring
  rules:
    - backendRefs:
        - name: prometheus-prometheus-blackbox-exporter
          port: 9115
      matches:
        - path:
            type: PathPrefix
            value: /
